--- a/变量提升.html
+++ b/变量提升.html
@@ -100,7 +100,7 @@
     })();
 
     /**
-     * hositMez()函数解析成：
+     * hositMe()函数解析成：
      * function hoistMe () {
      *  //函数声明，变量foo以及其实现都被提升到了作用域的上方.这种形式下可以先执行函数，在声明函数。
      *  function foo () {
